QXGEdit - Qt XG Editor
----------------------

ChangeLog


GIT HEAD

- Fixed for some g++ >= 8.1.1 warnings and quietness.


0.5.1  2018-05-21  Pre-LAC2018 release frenzy.

- Corrected wrong handling of the MULTIPART Detune parameter.

- Trying to get CC14 MSB+LSB (course+fine) running status on,
  no matter whether each pairing event are under 200ms apart.

- A little hardening on the configure (autoconf) macro side.


0.5.0  2017-12-16  End of Autum'17 release.

- Desktop entry specification file is now finally independent
  from build/configure template chains.

- Updated target path for freedesktop.org's AppStream metainfo
  file (formerly AppData).

- Changing the View/Options.../General/Widget style theme
  now takes effect immediately unless it's to "(default)".


0.4.3  2017-04-27  Pre-LAC2017 release frenzy.

- Added French man page (by Olivier Humbert, thanks).

- Added one decimal digit to the randomize percentage input
  spin-boxes on the General Options dialog.

- Make builds reproducible byte for byte, by getting rid of
  the configure build date and time stamps.


0.4.2  2016-11-14  A Fall'16 release.

- Fixed a potential crash on the singleton/unique application
  instance setup.

- MIDI RPN/NRPN running status and RPN NULL reset command
  are now supported (input only).

- Almost complete overhaul on the configure script command
  line options, wrt. installation directories specification,
  eg. --prefix, --bindir, --libdir, --datadir and --mandir.

- Remove extra 'Keywords' entry and fix spelling (patches by
  Jaromír Mikeš, thanks).


0.4.1  2016-09-14  End of Summer'16 release.

- Dropped the --enable-qt5 from configure as found redundant
  given that's the build default anyway (suggestion by Guido
  Scholz, while for Qtractor, thanks).


0.4.0  2016-04-05  Spring'16 release frenzy.

- Prevent x11extras module from use on non-X11/Unix plaforms.

- French (fr) translations update (by Olivier Humbert, thanks).
